@@ -1,1 +1,2 @@
+DIST cgminer-2.11.4.tar.bz2 5563115 SHA256 9f8673ba797144517f1b65dd13d71178cf46771bc754d78a6bc183bddeeb01d3 SHA512 91b26c930aacb69ba7d64b1c552e69e3fd51738c4a2e2dc26075053e5797dd03560f657170e8290a6dbb5a5d8557b158f6e218b27ebcab3879aa99b541b3dd08 WHIRLPOOL 302afe57f3a66d0f7f1ef8bea32d97d827d6e78b10b610eed9a7b180ecb6a302fe331e0a7d4ec49dfe9650eb1398f3c0fcedaa71fc5e3ff23298c2062de4cb84
 DIST cgminer-3.0.0.tar.bz2 5532778 SHA256 a50e2f594377f10ab91e92e1e0d79ccdb268b34dcaca2193c231330266583d55 SHA512 74e6e3adb88180359bf8f3407c18fa3c5934642eb659d728e273f7b8c0b9faf37311dbd0d2f6eaec8e17d88105ae2922137742ac628a4c31bbb70d0ee3cf2eb9 WHIRLPOOL 4ebcee5da694206b60bdd9c771b54ca277c0f1505f9b568f2409c5421fc569f11f21aa2fe099e981c5580d5c74bad1f330cd532e1e6273094c22dd0aa61a1431
